-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 7.0.2
-
None
-
-
4c83ec2372 (qt-creator/qt-creator/master) 4c83ec2372 (qt-creator/qt-creator/qds-dev) 4c83ec2372 (qt-creator/qt-creator/9.0)
每次mac os到点自动切换到黑夜模式后,qt creator也会跟着切换。于是qt creator背景色变成黑色,而文字却没有跟着变成白色,依旧是黑色,导致文字无法识别

- is duplicated by
-
QTCREATORBUG-28219 Qt Creator cannot adapt the dark theme correctly on macOS 13
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-28066 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 430008,2 | macOS: Do not partially switch light/dark when system switches | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |